--- a/css/index.css
+++ b/css/index.css
@@ -1,156 +1,173 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 html, body {
-  font: 12pt Roboto;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12pt;
   font-weight: 400;
   margin: 0;
   color: #3a3a3a;
-  height: 100%; }
-  html a, body a {
-    color: #3a3a3a;
-    text-decoration: none; }
-  html a:hover, body a:hover {
-    color: #ffee58; }
-  html #soundcloud, body #soundcloud {
-    max-width: 400px;
-    display: block;
-    margin-right: auto;
-    margin-left: auto; }
-  html h2, body h2 {
-    font-size: 50px;
-    font-weight: 500;
-    margin-top: 0px;
-    margin-bottom: 20px; }
-  html .header_wrap, body .header_wrap {
-    margin-top: 0;
-    top: 0;
-    width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0; }
+  html .header, body .header {
+    height: 75px;
     position: fixed;
-    background-color: #03a9f4; }
-    html .header_wrap .header, body .header_wrap .header {
-      width: 930px;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 15px 0 10px 0;
-      text-align: right; }
-      @media screen and (max-width: 800px) {
-        html .header_wrap .header, body .header_wrap .header {
-          text-align: center; } }
-      html .header_wrap .header #logo, body .header_wrap .header #logo {
-        width: 300px;
-        height: auto;
-        display: inline-block;
-        float: left;
-        margin-top: 10px; }
-        html .header_wrap .header #logo img, body .header_wrap .header #logo img {
-          width: 100%; }
-      html .header_wrap .header .nav_wrap, body .header_wrap .header .nav_wrap {
-        width: 500px;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding-left: 10%;
+    padding-right: 10%;
+    background-color: rgba(0, 0, 0, 0.85);
+    z-index: 1000;
+    color: #3a3a3a; }
+    html .header .navigation, body .header .navigation {
+      display: inline-block;
+      margin-top: 25px;
+      float: right; }
+      html .header .navigation .navigation_item, body .header .navigation .navigation_item {
         display: inline;
-        float: right; }
-      html .header_wrap .header .nav, body .header_wrap .header .nav {
-        margin: 5px 0 0 0;
-        padding: 0;
-        font-size: 13pt;
-        font-weight: 300;
-        height: 30px;
-        display: inline-block; }
-        html .header_wrap .header .nav li, body .header_wrap .header .nav li {
-          display: inline;
-          margin-left: 10px; }
-          html .header_wrap .header .nav li a, body .header_wrap .header .nav li a {
-            text-decoration: none;
-            color: white; }
-          html .header_wrap .header .nav li a:hover, html .header_wrap .header .nav li .active, body .header_wrap .header .nav li a:hover, body .header_wrap .header .nav li .active {
-            color: #ffee58;
-            text-decoration: underline; }
-        @media screen and (max-width: 800px) {
-          html .header_wrap .header .nav, body .header_wrap .header .nav {
-            margin-left: auto;
-            margin-right: auto;
-            text-align: center;
-            text-align: center;
-            width: 100%; }
-            html .header_wrap .header .nav li, body .header_wrap .header .nav li {
-              float: none;
-              margin-left: 7px;
-              margin-right: 7px; } }
-      html .header_wrap .header #main_nav, body .header_wrap .header #main_nav {
-        margin-top: 7px; }
-        @media screen and (max-width: 800px) {
-          html .header_wrap .header #main_nav, body .header_wrap .header #main_nav {
-            float: none; } }
-        html .header_wrap .header #main_nav li, body .header_wrap .header #main_nav li {
-          margin-left: 15px; }
-      @media screen and (max-width: 800px) {
-        html .header_wrap .header #social_nav, body .header_wrap .header #social_nav {
-          float: none; } }
-      html .header_wrap .header #social_nav li a div, body .header_wrap .header #social_nav li a div {
-        width: 33px;
-        height: 33px;
-        display: inline-block;
-        border-radius: 50%;
-        background-color: white;
-        background-repeat: no-repeat;
-        background-position: center; }
-      html .header_wrap .header #social_nav li a div:hover, body .header_wrap .header #social_nav li a div:hover {
-        background-color: #ffee58; }
-      html .header_wrap .header #facebook, body .header_wrap .header #facebook {
-        background: url(images/facebook.png); }
-      html .header_wrap .header #twitter, body .header_wrap .header #twitter {
-        background: url(images/twitter.png); }
-      html .header_wrap .header #instagram, body .header_wrap .header #instagram {
-        background: url(images/instagram.png); }
-      html .header_wrap .header #soundcloud, body .header_wrap .header #soundcloud {
-        background: url(images/soundcloud.png); }
-      html .header_wrap .header #spotify, body .header_wrap .header #spotify {
-        background: url(images/spotify.png); }
-    html .header_wrap .header:after, body .header_wrap .header:after {
-      content: "";
-      display: table;
-      clear: both; }
+        float: right;
+        padding-left: 25px; }
+        html .header .navigation .navigation_item a, body .header .navigation .navigation_item a {
+          color: white;
+          text-decoration: none;
+          font-size: 18px; }
+        html .header .navigation .navigation_item a:hover, body .header .navigation .navigation_item a:hover {
+          color: #e53c37; }
+    html .header .logo, body .header .logo {
+      height: auto;
+      width: auto;
+      display: inline-block;
+      padding-top: 13px;
+      float: left; }
+      html .header .logo img, body .header .logo img {
+        display: block;
+        height: 45px; }
   html .page_body, body .page_body {
-    clear: both;
-    padding-top: 104px;
-    min-height: 100%; }
-    html .page_body .page_element, body .page_body .page_element {
-      width: 930px;
-      margin-left: auto;
-      margin-right: auto;
-      padding-top: 50px;
-      padding-bottom: 50px; }
-    html .page_body #page_soundcloud, body .page_body #page_soundcloud {
-      display: none; }
-    html .page_body #page_about, body .page_body #page_about {
-      display: none; }
-      html .page_body #page_about .about_text, body .page_body #page_about .about_text {
-        width: 40%;
-        float: left;
-        font-weight: 300;
-        font-size: 16px; }
-      html .page_body #page_about .about_image, body .page_body #page_about .about_image {
-        width: 58%;
-        float: right; }
-        html .page_body #page_about .about_image img, body .page_body #page_about .about_image img {
-          width: 100%; }
-    html .page_body #page_media, body .page_body #page_media {
-      display: none;
-      overflow: hidden; }
-      html .page_body #page_media .media_image, body .page_body #page_media .media_image {
-        width: 32.3%;
-        height: 188px;
-        margin-right: 1%;
-        float: left;
-        margin-bottom: 10px;
-        overflow: hidden; }
-        html .page_body #page_media .media_image img, body .page_body #page_media .media_image img {
-          max-width: 100%;
-          height: auto; }
-      html .page_body #page_media .media_image:nth-child(3), body .page_body #page_media .media_image:nth-child(3) {
-        margin-right: 0; }
-    html .page_body #page_contact, body .page_body #page_contact {
-      display: none; }
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    overflow: auto; }
+    html .page_body .top_section, body .page_body .top_section {
+      min-height: 100%;
+      position: relative;
+      background: url(images/background.jpg) no-repeat;
+      background-size: cover;
+      background-position: center; }
+    html .page_body .content_wrap, body .page_body .content_wrap {
+      width: 100%;
+      height: auto;
+      margin: 0;
+      padding: 0;
+      overflow: auto;
+      position: relative; }
+      html .page_body .content_wrap .anchor_offset, body .page_body .content_wrap .anchor_offset {
+        display: block;
+        position: absolute;
+        width: 0;
+        height: 0;
+        z-index: -1;
+        top: -75px;
+        left: 0;
+        visibility: hidden; }
+      html .page_body .content_wrap .content_block, body .page_body .content_wrap .content_block {
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 45px;
+        padding-bottom: 65px;
+        text-align: center; }
+        html .page_body .content_wrap .content_block h2, body .page_body .content_wrap .content_block h2 {
+          margin-top: 0;
+          font-size: 3em;
+          font-weight: 400; }
+        html .page_body .content_wrap .content_block .video_wrap, body .page_body .content_wrap .content_block .video_wrap {
+          position: relative;
+          padding-top: 25px;
+          height: 0; }
+          html .page_body .content_wrap .content_block .video_wrap iframe, body .page_body .content_wrap .content_block .video_wrap iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%; }
+        html .page_body .content_wrap .content_block .full_width_video, body .page_body .content_wrap .content_block .full_width_video {
+          clear: both;
+          width: 100%;
+          padding-bottom: 53.8%; }
+        html .page_body .content_wrap .content_block .partial_width_video, body .page_body .content_wrap .content_block .partial_width_video {
+          float: left;
+          width: 30%;
+          margin-left: 1.5%;
+          margin-right: 1.5%;
+          margin-bottom: 50px;
+          padding-bottom: 14.5%; }
+        html .page_body .content_wrap .content_block .social_icons, body .page_body .content_wrap .content_block .social_icons {
+          display: inline-block;
+          float: right;
+          margin-top: 0; }
+          html .page_body .content_wrap .content_block .social_icons li, body .page_body .content_wrap .content_block .social_icons li {
+            display: inline;
+            margin-left: 20px;
+            width: 33px;
+            height: 33px;
+            display: inline-block;
+            border-radius: 50%;
+            background-color: white;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain; }
+            html .page_body .content_wrap .content_block .social_icons li #facebook, body .page_body .content_wrap .content_block .social_icons li #facebook {
+              background: url(images/facebook.png);
+              height: 33px;
+              width: 33px;
+              background-repeat: no-repeat;
+              background-position: center;
+              background-size: 11px 22px; }
+            html .page_body .content_wrap .content_block .social_icons li #twitter, body .page_body .content_wrap .content_block .social_icons li #twitter {
+              background: url(images/twitter.png);
+              height: 33px;
+              width: 33px;
+              background-repeat: no-repeat;
+              background-position: center;
+              background-size: 22px 17px; }
+            html .page_body .content_wrap .content_block .social_icons li #instagram, body .page_body .content_wrap .content_block .social_icons li #instagram {
+              background: url(images/instagram.png);
+              height: 33px;
+              width: 33px;
+              background-repeat: no-repeat;
+              background-position: center;
+              background-size: 20px 20px; }
+            html .page_body .content_wrap .content_block .social_icons li #soundcloud, body .page_body .content_wrap .content_block .social_icons li #soundcloud {
+              background: url(images/soundcloud.png);
+              height: 33px;
+              width: 33px;
+              background-repeat: no-repeat;
+              background-position: center;
+              background-size: 22px 11px; }
+            html .page_body .content_wrap .content_block .social_icons li #spotify, body .page_body .content_wrap .content_block .social_icons li #spotify {
+              background: url(images/spotify.png);
+              height: 33px;
+              width: 33px;
+              background-repeat: no-repeat;
+              background-position: center;
+              background-size: 22px 22px; }
+        html .page_body .content_wrap .content_block #contact_mail, body .page_body .content_wrap .content_block #contact_mail {
+          color: white;
+          text-decoration: none;
+          float: left;
+          font-size: 22px; }
+    html .page_body .grey_block, body .page_body .grey_block {
+      background-color: #f7f7f7; }
+    html .page_body .green_block, body .page_body .green_block {
+      background-color: #1de9b6; }
+    html .page_body .white_block, body .page_body .white_block {
+      background-color: white; }
+    html .page_body .red_block, body .page_body .red_block {
+      background-color: #e53c37; }
