--- a/css/index.scss
+++ b/css/index.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
 @import "bourbon/bourbon"; // or "bourbon" when in Rails
 @import "grid-settings";
 @import "neat/neat";
@@ -6,215 +6,209 @@
 $background-grey: #F7F7F7;
 $yohannes_blue: #03A9F4;
 $yohannes_yellow: #FFEE58;
+$yohannes_green: #1de9b6;
+$yohannes_grey: #f7f7f7;
+$yohannes_red: #e53c37;
 $body-text: #3A3A3A;
 $mobile: new-breakpoint(max-width 800px 12);
 
 html, body{
-	font: 12pt Roboto;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 12pt;
 	font-weight: 400;
 	margin: 0;
 	color: $body-text;
 	height: 100%;
-	a{
-		color: $body-text;
-		text-decoration: none;
-	}
-	a:hover{
-		color: $yohannes_yellow;
-	}
-	#soundcloud{
-		max-width: 400px;
-		display: block;
-		margin-right: auto;
-		margin-left: auto;
-	}
-	h2{
-		font-size: 50px;
-		font-weight: 500;
-		margin-top: 0px;
-		margin-bottom: 20px;
-	}
-	.header_wrap{
-		margin-top: 0;
-		top: 0;
-		width: 100%;
+	margin: 0;
+	padding: 0;
+
+	.header{
+		height: 75px;
 		position: fixed;
-		background-color: $yohannes_blue;
-		.header{
-			width: 930px;
-			margin-left: auto;
-			margin-right: auto;
-			padding: 15px 0 10px 0;
-			text-align: right;
-			@include media($mobile){
-				text-align: center;
-			}
-			#logo {
-				width: 300px;
-				height: auto;
-				display: inline-block;
-				float: left;
-				margin-top: 10px;
-				img {
-					width: 100%;
-				}
-			}
-			.nav_wrap{
-				width: 500px;
+		top: 0;
+		left: 0;
+		right: 0;
+		padding-left: 10%;
+		padding-right: 10%;
+		background-color: rgba(0,0,0,.85);
+		z-index: 1000;
+		color: $body-text;
+		.navigation{
+			display: inline-block;
+			margin-top: 25px;
+			float: right;
+			.navigation_item{
 				display: inline;
 				float: right;
-			}
-			.nav{
-				margin: 5px 0 0 0;
-				padding: 0;
-				font-size: 13pt; 
-				font-weight: 300;
-				height: 30px;
-				display: inline-block;
-				li{
-					display: inline;
-					margin-left: 10px;
-					a{
-						text-decoration: none;
-						color: white;
-					}
-					a:hover, .active{
-						color: $yohannes_yellow;
-						text-decoration: underline;
-					}
+				padding-left: 25px;
+				a{
+					color: white;
+					text-decoration: none;
+					font-size: 18px;
 				}
-				@include media($mobile){
-					margin-left: auto;
-					margin-right: auto;
-					text-align: center;
-					text-align: center;
-					width: 100%;
-					li{
-						float: none;
-						margin-left: 7px;
-						margin-right: 7px;
-					}
+				a:hover{
+					color: $yohannes_red;
 				}
-			}
-			#main_nav{
-				margin-top: 7px;
-				@include media($mobile){
-					float: none;
-				}
-				li{
-					margin-left: 15px;
-				}
-			}
-			#social_nav{
-				@include media($mobile){
-					float: none;
-				}
-			}
-			#social_nav li a div{
-				width: 33px;
-				height: 33px;
-				display: inline-block;
-				border-radius: 50%; 
-				background-color: white;
-				background-repeat: no-repeat;
-				background-position: center;
-			}
-			#social_nav li a div:hover{
-				background-color: $yohannes_yellow;
-			}
-			#facebook{
-				background: url(images/facebook.png);
-			}
-			#facebook:hover{
-				//background-color: #3b5998;
-			}
-			#twitter{
-				background: url(images/twitter.png);
-			}
-			#twitter:hover{
-				//background-color: #00aced;
-			}
-			#instagram{
-				background: url(images/instagram.png);
-			}
-			#instagram:hover{
-				//background-color: #517fa4;
-			}
-			#soundcloud{
-				background: url(images/soundcloud.png);
-			}
-			#soundcloud:hover{
-				//background-color: #f70;
-			}
-			#spotify{
-				background: url(images/spotify.png);
-			}
-			#spotify:hover{
-				//background-color: #81b71a;
 			}
 		}
-		.header:after {
-		  content:"";
-		  display:table;
-		  clear:both;
-		}
-	}
-	.page_body{
-		clear: both;
-		padding-top: 104px;
-		min-height: 100%;
-		.page_element{
-			width: 930px;
-			margin-left: auto;
-			margin-right: auto;
-			padding-top: 50px;
-			padding-bottom: 50px
-		}
-		#page_home{
-		}
-		#page_soundcloud{
-			display: none;
-		}
-		#page_about {
-			display: none;
-			.about_text{
-				width: 40%;
-				float: left;
-				font-weight: 300;
-				font-size: 16px;
+		.logo{
+			height: auto;
+			width: auto;
+			display: inline-block;
+			padding-top: 13px;
+			float: left;
+			img{
+				display: block;
+				height: 45px;
 			}
-			.about_image{
-				width: 58%;
-				float: right;
-				img{
-					width: 100%;
-				}
-			}
+		}
+	}	
 
+	.page_body{
+		width: 100%;
+		height: 100%;
+		position: relative;
+		margin: 0;
+		padding: 0;
+		overflow: auto;
+		.top_section{
+			min-height: 100%;
+			position: relative;
+			background: url(images/background.jpg) no-repeat;
+ 			background-size: cover;
+ 			background-position: center
 		}
-		#page_media{
-			display: none;
-			overflow: hidden;
-			.media_image {
-				width: 32.3%;
-				height: 188px;
-				margin-right: 1%;
-				float: left;
-				margin-bottom: 10px;
-				overflow: hidden;
-				img {
-					max-width: 100%;
-					height: auto;
+		.content_wrap{
+			width: 100%;
+			height: auto;
+			margin: 0;
+			padding: 0;
+			overflow: auto;
+			position: relative;
+			.anchor_offset{
+				display: block;
+			    position: absolute;
+			    width: 0;
+			    height: 0;
+			    z-index: -1;
+			    top: -75px;
+			    left: 0;
+			    visibility: hidden;
+			}
+			.content_block{
+				max-width: 1000px;
+				margin-left: auto;
+				margin-right: auto;
+				padding-top: 45px;
+				padding-bottom: 65px;
+				text-align: center;
+				h2{
+					//color: white;
+					margin-top: 0;
+					font-size: 3em;
+					font-weight: 400;
+				}
+				.video_wrap{
+					position: relative;
+					padding-top: 25px;
+					height: 0;
+					iframe{
+						position: absolute;
+						top: 0;
+						left: 0;
+						width: 100%;
+						height: 100%;
+					}
+				}
+				.full_width_video{
+					clear: both;
+					width: 100%;
+					padding-bottom: 53.8%; //video aspect ratio
+				}
+				.partial_width_video{
+					float: left;
+					width: 30%;
+					margin-left: 1.5%;
+					margin-right: 1.5%;
+					margin-bottom: 50px;
+					padding-bottom: 14.5%; //video aspect ratio
+				}
+				.social_icons{
+					display: inline-block;
+					float: right;
+					margin-top: 0;
+					li{
+						display: inline;
+						margin-left: 20px;
+						width: 33px;
+						height: 33px;
+						display: inline-block;
+						border-radius: 50%; 
+						background-color: white;
+						background-repeat: no-repeat;
+						background-position: center;
+						background-size: contain;
+						#facebook{
+							background: url(images/facebook.png);
+							height: 33px;
+							width: 33px;
+							background-repeat: no-repeat;
+							background-position: center;
+							background-size: 11px 22px;
+						}
+						#twitter{
+							background: url(images/twitter.png);
+							height: 33px;
+							width: 33px;
+							background-repeat: no-repeat;
+							background-position: center;
+							background-size: 22px 17px;
+						}
+						#instagram{
+							background: url(images/instagram.png);
+							height: 33px;
+							width: 33px;
+							background-repeat: no-repeat;
+							background-position: center;
+							background-size: 20px 20px;
+						}
+						#soundcloud{
+							background: url(images/soundcloud.png);
+							height: 33px;
+							width: 33px;
+							background-repeat: no-repeat;
+							background-position: center;
+							background-size: 22px 11px;
+						}
+						#spotify{
+							background: url(images/spotify.png);
+							height: 33px;
+							width: 33px;
+							background-repeat: no-repeat;
+							background-position: center;
+							background-size: 22px 22px;
+						}
+					}
+				}
+				#contact_mail{
+					color: white;
+					text-decoration: none;
+					float: left;
+					font-size: 22px;
 				}
 			}
-			.media_image:nth-child(3) {
-			    margin-right: 0;
-			}
 		}
-		
-		
-		#page_contact{
-			display: none;
+		.grey_block{
+			background-color: $yohannes_grey;
+		}
+		.green_block{
+			background-color: $yohannes_green;
+		}
+		.white_block{
+			background-color: white;
+		}
+		.red_block{
+			background-color: $yohannes_red;
 		}
 	}
 }
